# enem-corrections

./: .env  .env.example  404.html  README.md  db.sqlite3  index.html  manage.py  mkdocs.yml  pyproject.toml  sitemap.xml
accounts/: admin.py  models.py  serializers.py  urls.py  views.py
accounts/management/commands/: createadmin.py  createuser.py  (+1 more)
accounts/migrations/: 0001_initial.py  0002_alter_customuser_email_alter_customuser_role.py
api/accounts-api/: index.html
apps/accounts/: index.html
apps/dashboard/: index.html
apps/performance/: index.html
architecture/: index.html
configuracao/env/: index.html
core/: asgi.py  urls.py  wsgi.py
core/settings/: __init__.py  base.py  prod.py
dashboard/: pdf.py  services.py  urls.py  views.py
docs/: README.md  architecture.md  index.md  usuarios.md
docs/api/: accounts-api.md  essays-api.md  performance-api.md
docs/apps/: accounts-api.md  accounts.md  dashboard.md  essays.md  performance.md  profiles.md
docs/configuracao/: env.md  settings.md
essays/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
essays/migrations/: 0001_initial.py  0002_alter_competencescore_c1_alter_competencescore_c2_and_more.py  0003_essay_pdf.py
performance/: models.py  urls.py  views.py
performance/migrations/: 0001_initial.py
performance/services/: performance_service.py
profiles/: admin.py  models.py  serializers.py  urls.py  views.py
profiles/migrations/: 0001_initial.py
scripts/: README.md  clear_cache.sh  serve_docs.sh
search/: search_index.json
visual/templates/: base.html
(+34 files in other folders)
